Initial commit: Survey Savvy - Professional survey platform with World ID verification
 Features:
- World ID authentication & verification
- Cryptocurrency rewards system (500 marks = 5 WLD)
- Professional survey creation & management
- User ranking system with 8 tiers
- Treasury-funded automatic withdrawals
- Responsive design with mobile navigation
- Admin dashboard for platform management

 Technical Stack:
- Next.js 15.5.2 with TypeScript
- PostgreSQL database
- World ID/Worldcoin integration
- Blockchain wallet connectivity
- Professional UI/UX design

 Security:
- Environment-based configuration
- Secure treasury wallet management
- Input validation & rate limiting
- Comprehensive .gitignore for sensitive data

 Documentation:
- Complete setup instructions
- Security guidelines
- API documentation
- Feature specifications

Developed by Wai Yan Kyaw

--- a/.env.example
+++ b/.env.example
@@ -1,5 +1,29 @@
-APP_ID="INSERT_APPID"
-DEV_PORTAL_API_KEY="APIKEY"
-WLD_CLIENT_ID=
-WLD_CLIENT_SECRET=
-NEXTAUTH_URL=http://localhost:3000
+# 🔒 SECURITY - Keep these private in production
+DATABASE_URL=postgresql://user:password@host:port/database
+JWT_SECRET=your-super-secret-jwt-key-here-make-it-long-and-random
+WLD_CLIENT_SECRET=sk_your_worldcoin_client_secret_here
+DEV_PORTAL_API_KEY=api_your_worldcoin_dev_portal_api_key_here
+NEXTAUTH_SECRET=your-nextauth-secret-key-here
+
+# 🔒 TREASURY WALLET CONFIGURATION (KEEP PRIVATE!)
+# Generate a new private key for production - NEVER use the example key!
+TREASURY_PRIVATE_KEY=0xYOUR_TREASURY_PRIVATE_KEY_HERE_64_CHARACTERS
+
+# 🌐 Public values (safe to include but customize for your app)
+APP_ID=app_your_app_id_here
+WLD_CLIENT_ID=app_your_app_id_here
+NEXTAUTH_URL=https://your-domain.com
+WORLDCOIN_ACTION_NAMESPACE=surveyverify
+WORLDCOIN_LOGIN_ACTION=surveyformverification
+MAX_SURVEY_GOAL=3000
+HELP_POINTS_DAILY_CAP=500
+PURCHASE_WEEKLY_POINTS=10
+
+# 🔗 Public environment variables (customize for your deployment)
+NEXT_PUBLIC_WLD_CLIENT_ID=app_your_app_id_here
+NEXT_PUBLIC_APP_ID=app_your_app_id_here
+NEXT_PUBLIC_WORLDCOIN_LOGIN_ACTION=surveyformverification
+NEXT_PUBLIC_WALLET_ACTION=getwalletaddress
+
+# ⚠️ DEVELOPMENT ONLY - Remove or set to 0 in production!
+# WORLDCOIN_BYPASS=0
