--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "app-router-template",
+  "name": "survey-savvy",
   "version": "0.1.0",
   "private": true,
   "scripts": {
@@ -10,16 +10,27 @@
   },
   "dependencies": {
     "@worldcoin/minikit-js": "1.3.0",
+    "@worldcoin/minikit-react": "^1.9.7",
+    "dotenv": "^17.2.2",
     "eruda": "^3.2.3",
-    "next": "14.2.6",
+    "jsonwebtoken": "^9.0.2",
+    "next": "^15.5.2",
     "next-auth": "^4.24.7",
+    "pg": "^8.12.0",
     "react": "^18",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "react-icons": "^5.5.0",
+    "uuid": "^9.0.1",
+    "viem": "^2.37.4",
+    "zod": "^3.23.8"
   },
   "devDependencies": {
+    "@types/jsonwebtoken": "^9.0.5",
     "@types/node": "^20",
+    "@types/pg": "^8.15.5",
     "@types/react": "^18",
     "@types/react-dom": "^18",
+    "@types/uuid": "^9.0.7",
     "eslint": "^8",
     "eslint-config-next": "14.2.6",
     "postcss": "^8",
